asset meteran pln change

--- a/Ruangan/ruang_keluarga.html
+++ b/Ruangan/ruang_keluarga.html
@@ -72,7 +72,7 @@
     <div class="flex  justify-center items-center min-h-screen bg-gray-800  gap-4">
 
         <div class="flex flex-col gap-2 items-center">
-            <img src="https://o.remove.bg/downloads/ebf3b935-6dc1-414e-86b5-064d739bc484/png-clipart-electricity-meter-computer-icons-electrician-others-electrical-wires-cable-electricity-removebg-preview.png" alt="" >
+            <img src="../assets/images/pln.jpg" alt="" >
             <label for="default-toggle01" class="relative inline-flex items-center cursor-pointer">
                 <input type="checkbox" value="" class="sr-only peer" id="default-toggle01" onchange="ruang_keluarga()">
                 <div
